--- a/index.html
+++ b/index.html
@@ -22,29 +22,251 @@
     <title>Frontend Mentor | Easybank landing page</title>
   </head>
   <body>
-    Home About Contact Blog Careers Request Invite Next generation digital
-    banking Take your financial life online. Your Easybank account will be a
-    one-stop-shop for spending, saving, budgeting, investing, and much more.
-    Request Invite Why choose Easybank? We leverage Open Banking to turn your
-    bank account into your financial hub. Control your finances like never
-    before. Online Banking Our modern web and mobile applications allow you to
-    keep track of your finances wherever you are in the world. Simple Budgeting
-    See exactly where your money goes each month. Receive notifications when
-    you’re close to hitting your limits. Fast Onboarding We don’t do branches.
-    Open your account in minutes online and start taking control of your
-    finances right away. Open API Manage your savings, investments, pension, and
-    much more from one account. Tracking your money has never been easier.
-    Latest Articles By Claire Robinson Receive money in any currency with no
-    fees The world is getting smaller and we’re becoming more mobile. So why
-    should you be forced to only receive money in a single … By Wilson Hutton
-    Treat yourself without worrying about money Our simple budgeting feature
-    allows you to separate out your spending and set realistic limits each
-    month. That means you … By Wilson Hutton Take your Easybank card wherever
-    you go We want you to enjoy your travels. This is why we don’t charge any
-    fees on purchases while you’re abroad. We’ll even show you … By Claire
-    Robinson Our invite-only Beta accounts are now live! After a lot of hard
-    work by the whole team, we’re excited to launch our closed beta. It’s easy
-    to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
+    <header>
+      <nav class="header__nav">
+        <img src="./images/logo.svg" alt="logo" class="header__nav__logo" />
+        <btn class="header__nav__hamburger hamburger__hidden"></btn>
+        <ul class="header__nav__items">
+          <li class="header__nav__item">
+            <a href="#">Home</a>
+          </li>
+          <li class="header__nav__item">
+            <a href="#">About</a>
+          </li>
+          <li class="header__nav__item">
+            <a href="#">Contact</a>
+          </li>
+          <li class="header__nav__item">
+            <a href="#">Blog</a>
+          </li>
+          <li class="header__nav__item">
+            <a href="#">Careers</a>
+          </li>
+        </ul>
+        <a href="#" class="btn btn--header">Request Invite</a>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="hero">
+        <div class="hero__details">
+          <h1 class="heading--1">Next generation digital banking</h1>
+          <p class="paragraph">
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="btn btn--header">Request Invite</a>
+        </div>
+        <div class="hero__images">
+          <img
+            src="./images/bg-intro-desktop.svg"
+            alt="Background SVG"
+            class="hero__images__background"
+          />
+          <img
+            src="./images/bg-intro-mobile.svg"
+            alt="Background SVG"
+            class="hero__images__background__phone"
+          />
+          <img
+            src="./images/image-mockups.png"
+            alt="Photo of phone"
+            class="hero__images__phone"
+          />
+        </div>
+      </section>
+      <section class="features">
+        <div class="features__details">
+          <h2 class="features__heading heading--2">Why choose Easybank?</h2>
+          <p class="paragraph">
+            We leverage Open Banking to turn your bank account into your
+            financial hub. Control your finances like never before.
+          </p>
+        </div>
+        <div class="features__cards">
+          <div class="features__card__components">
+            <div class="features__card">
+              <img
+                src="./images/icon-online.svg"
+                alt="Icons"
+                class="features__card__icon"
+              />
+              <h3 class="heading--3">Online Banking</h3>
+              <p class="paragraph">
+                Our modern web and mobile applications allow you to keep track
+                of your finances wherever you are in the world.
+              </p>
+            </div>
+          </div>
+          <div class="features__card__components">
+            <div class="features__card">
+              <img
+                src="./images/icon-budgeting.svg"
+                alt="Icons"
+                class="features__card__icon"
+              />
+              <h3 class="heading--3">Simple Budgeting</h3>
+              <p class="paragraph">
+                See exactly where your money goes each month. Receive
+                notifications when you’re close to hitting your limits.
+              </p>
+            </div>
+          </div>
+          <div class="features__card__components">
+            <div class="features__card">
+              <img
+                src="./images/icon-onboarding.svg"
+                alt="Icons"
+                class="features__card__icon"
+              />
+              <h3 class="heading--3">Fast Onboarding</h3>
+              <p class="paragraph">
+                We don’t do branches. Open your account in minutes online and
+                start taking control of your finances right away.
+              </p>
+            </div>
+          </div>
+          <div class="features__card__components">
+            <div class="features__card">
+              <img
+                src="./images/icon-api.svg"
+                alt="Icons"
+                class="features__card__icon"
+              />
+              <h3 class="heading--3">Open API</h3>
+              <p class="paragraph">
+                Manage your savings, investments, pension, and much more from
+                one account. Tracking your money has never been easier.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="articles">
+        <h2 class="heading--2">Latest Articles</h2>
+        <div class="articles__figures">
+          <figure class="articles__figure">
+            <img
+              src="./images/image-currency.jpg"
+              alt="Image of currency"
+              class="articles__figure__image"
+            />
+            <div class="articles__details">
+              <p class="articles__figure__author">By Claire Robinson</p>
+              <h4 class="heading--4">
+                Receive money in any currency with no fees
+              </h4>
+              <figcaption class="paragraph">
+                The world is getting smaller and we’re becoming more mobile. So
+                why should you be forced to only receive money in a single …
+              </figcaption>
+            </div>
+          </figure>
+          <figure class="articles__figure">
+            <img
+              src="./images/image-restaurant.jpg"
+              alt="Image of currency"
+              class="articles__figure__image"
+            />
+            <div class="articles__details">
+              <p class="articles__figure__author">By Wilson Hutton</p>
+              <h4 class="heading--4">
+                Treat yourself without worrying about money
+              </h4>
+              <figcaption class="paragraph">
+                Our simple budgeting feature allows you to separate out your
+                spending and set realistic limits each month. That means you …
+              </figcaption>
+            </div>
+          </figure>
+          <figure class="articles__figure">
+            <img
+              src="./images/image-plane.jpg"
+              alt="Image of currency"
+              class="articles__figure__image"
+            />
+            <div class="articles__details">
+              <p class="articles__figure__author">By Wilson Hutton</p>
+              <h4 class="heading--4">
+                Take your Easybank card wherever you go
+              </h4>
+              <figcaption class="paragraph">
+                We want you to enjoy your travels. This is why we don’t charge
+                any fees on purchases while you’re abroad. We’ll even show you …
+              </figcaption>
+            </div>
+          </figure>
+          <figure class="articles__figure">
+            <img
+              src="./images/image-confetti.jpg"
+              alt="Image of currency"
+              class="articles__figure__image"
+            />
+            <div class="articles__details">
+              <p class="articles__figure__author">By Claire Robinson</p>
+              <h4 class="heading--4">
+                Our invite-only Beta accounts are now live!
+              </h4>
+              <figcaption class="paragraph">
+                After a lot of hard work by the whole team, we’re excited to
+                launch our closed beta. It’s easy to request an invite through
+                the site ...
+              </figcaption>
+            </div>
+          </figure>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__company">
+        <img
+          src="./images/logo-white.svg"
+          alt="logo"
+          class="footer__company__logo"
+        />
+        <ul class="footer__company__social">
+          <li>
+            <a href="#"
+              ><img src="./images/icon-facebook.svg" alt="Icon facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/icon-twitter.svg" alt="Icon twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/icon-facebook.svg" alt="Icon facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/icon-pinterest.svg" alt="Icon pinterest"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/icon-facebook.svg" alt="Icon facebook"
+            /></a>
+          </li>
+        </ul>
+      </div>
+
+      <nav class="footer__nav">
+        <ul class="footer__nav__items">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </nav>
+      <div class="footer__invite">
+        <a href="#" class="btn btn--header">Request Invite</a>
+        <p class="footer__invite__arr">© Easybank. All Rights Reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
