--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       <section class="hero">
         <div class="hero__details">
           <h1 class="heading--1">Next generation digital banking</h1>
-          <p class="paragraph">
+          <p class="paragraph hero__p">
             Take your financial life online. Your Easybank account will be a
             one-stop-shop for spending, saving, budgeting, investing, and much
             more.
           </p>
-          <a href="#" class="btn btn--header">Request Invite</a>
+          <a href="#" class="btn">Request Invite</a>
         </div>
         <div class="hero__images">
           <img
@@ -78,7 +78,7 @@
       <section class="features">
         <div class="features__details">
           <h2 class="features__heading heading--2">Why choose Easybank?</h2>
-          <p class="paragraph">
+          <p class="paragraph features__p">
             We leverage Open Banking to turn your bank account into your
             financial hub. Control your finances like never before.
           </p>
@@ -92,7 +92,7 @@
                 class="features__card__icon"
               />
               <h3 class="heading--3">Online Banking</h3>
-              <p class="paragraph">
+              <p class="paragraph features__p">
                 Our modern web and mobile applications allow you to keep track
                 of your finances wherever you are in the world.
               </p>
@@ -106,7 +106,7 @@
                 class="features__card__icon"
               />
               <h3 class="heading--3">Simple Budgeting</h3>
-              <p class="paragraph">
+              <p class="paragraph features__p">
                 See exactly where your money goes each month. Receive
                 notifications when you’re close to hitting your limits.
               </p>
@@ -120,7 +120,7 @@
                 class="features__card__icon"
               />
               <h3 class="heading--3">Fast Onboarding</h3>
-              <p class="paragraph">
+              <p class="paragraph features__p">
                 We don’t do branches. Open your account in minutes online and
                 start taking control of your finances right away.
               </p>
@@ -134,7 +134,7 @@
                 class="features__card__icon"
               />
               <h3 class="heading--3">Open API</h3>
-              <p class="paragraph">
+              <p class="paragraph features__p">
                 Manage your savings, investments, pension, and much more from
                 one account. Tracking your money has never been easier.
               </p>
@@ -264,7 +264,7 @@
         </ul>
       </nav>
       <div class="footer__invite">
-        <a href="#" class="btn btn--header">Request Invite</a>
+        <a href="#" class="btn">Request Invite</a>
         <p class="footer__invite__arr">© Easybank. All Rights Reserved</p>
       </div>
     </footer>
